After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 636581 - [PATCH] Adapt to API change in gdk_window_get_geometry
[PATCH] Adapt to API change in gdk_window_get_geometry
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Display
git master
Other Linux
: Normal normal
: ---
Assigned To: Soren Sandmann Pedersen
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-12-06 11:12 UTC by Florian Gawrilowicz
Modified: 2010-12-06 13:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
And here is a patch to fix that (1.09 KB, patch)
2010-12-06 11:16 UTC, Florian Gawrilowicz
none Details | Review

Description Florian Gawrilowicz 2010-12-06 11:12:33 UTC
gdk_window_get_geometry dropped the "gint *depth" argument in GTK-2.91.6, which wasn't used anyway. It caused the following error:

make[4]: Entering directory `/home//co/gnome3/gnome-control-center/panels/display'
  CC     xrandr-capplet.lo
xrandr-capplet.c: In function 'get_output_for_window':
xrandr-capplet.c:2357:3: error: too many arguments to function 'gdk_window_get_geometry'
/opt/gnome3/include/gtk-3.0/gdk/gdkwindow.h:719:12: note: declared here
make[4]: *** [xrandr-capplet.lo] Error 1
Comment 1 Florian Gawrilowicz 2010-12-06 11:16:59 UTC
Created attachment 175906 [details] [review]
And here is a patch to fix that
Comment 2 Owen Taylor 2010-12-06 13:40:25 UTC
Hey thanks for the patch. We don't want to scatter #ifdefs all over the code
to work with obsolete GTK+-2.9x versions so I pushed a simpler change that
just removes the argument.

(What would make sense would be to update the GTK+ 3 version required in
configure.ac, but there wasn't one and the configure.ac code wasn't well
structured to take one - bug  636593 - so I just skipped it.)