xandr-capplet: Remove depth argument from gdk_window_get_geometry()

Make compile again with the latest GTK+ 2.9x API changes.

https://bugzilla.gnome.org/show_bug.cgi?id=636581